kubernetes/apps/network/hass-proxy/app/httproute.yaml
---
# yaml-language-server: $schema=https://crd.movishell.pl/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hass-proxy
  annotations:
    gatus.home-operations.com/endpoint: |-
      name: homeassistant
    unifi.external-dns.kubernetes.io/exclude: "true"
spec:
  hostnames: ["${HOSTNAME}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: hass-proxy
      matches:
        - path:
            type: PathPrefix
            value: /
