kubernetes/apps/network/hass-proxy/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass-proxy
spec:
  ingressClassName: public
  rules:
    - host: ${HOSTNAME}
      http:
        paths:
          - backend:
              service:
                name: hass-proxy
                port:
                  name: http
            path: /
            pathType: Prefix
